# paradox-reader

./: .gitignore  LICENSE  Pipfile  README.md  files.yml  init.py  paradoxReader.py  pyproject.toml  test
.github/: FUNDING.yml
