[tool.poetry]
name = "paradox-reader"
version = "0.1.0"
description = ""
authors = ["jnygaard <josh.nygaard@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
